@@ -64,7 +64,7 @@ IntDir=.\../Debug6
 TargetDir=\stepmania\stepmania
 TargetName=StepMania-debug
 SOURCE="$(InputPath)"
-PreLink_Cmds=disasm\verinc                                                                                                                                	cl                                                                                                                                 /Zl                                                                                                                                 /nologo                                                                                                                                 /c                                                                                                                                 verstub.cpp                                                                                                                                 /Fo$(IntDir)\ 
+PreLink_Cmds=disasm\verinc                                                                                                                                 	cl                                                                                                                                  /Zl                                                                                                                                  /nologo                                                                                                                                  /c                                                                                                                                  verstub.cpp                                                                                                                                  /Fo$(IntDir)\ 
 PostBuild_Cmds=disasm\mapconv $(IntDir)\$(TargetName).map $(TargetDir)\StepMania.vdi ia32.vdi
 # End Special Build Tool
 
@@ -104,7 +104,7 @@ IntDir=.\StepMania___Xbox_Debug___VC6
 TargetDir=.\StepMania___Xbox_Debug___VC6
 TargetName=StepMania
 SOURCE="$(InputPath)"
-PreLink_Cmds=disasm\verinc                                                                                                                                	cl                                                                                                                                 /Zl                                                                                                                                 /nologo                                                                                                                                 /c                                                                                                                                 verstub.cpp                                                                                                                                 /Fo$(IntDir)\ 
+PreLink_Cmds=disasm\verinc                                                                                                                                 	cl                                                                                                                                  /Zl                                                                                                                                  /nologo                                                                                                                                  /c                                                                                                                                  verstub.cpp                                                                                                                                  /Fo$(IntDir)\ 
 PostBuild_Cmds=disasm\mapconv $(IntDir)\$(TargetName).map $(TargetDir)\StepMania.vdi ia32.vdi
 # End Special Build Tool
 
@@ -144,7 +144,7 @@ IntDir=.\../Release6
 TargetDir=\stepmania\stepmania
 TargetName=StepMania
 SOURCE="$(InputPath)"
-PreLink_Cmds=disasm\verinc                                                                                                                                	cl                                                                                                                                 /Zl                                                                                                                                 /nologo                                                                                                                                 /c                                                                                                                                 verstub.cpp                                                                                                                                 /Fo$(IntDir)\ 
+PreLink_Cmds=disasm\verinc                                                                                                                                 	cl                                                                                                                                  /Zl                                                                                                                                  /nologo                                                                                                                                  /c                                                                                                                                  verstub.cpp                                                                                                                                  /Fo$(IntDir)\ 
 PostBuild_Cmds=disasm\mapconv $(IntDir)\$(TargetName).map $(TargetDir)\StepMania.vdi ia32.vdi
 # End Special Build Tool
 
@@ -333,6 +333,10 @@ SOURCE=.\RageInput.cpp
 
 !ENDIF 
 
+# End Source File
+# Begin Source File
+
+SOURCE=.\RageInput.h
 # End Source File
 # Begin Source File
 
